ARMTemplates/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storage_account_name": {
            "type": "string",
            "metadata": {
                "description": "Name of the storage account"
            }
        },
        "location": {
            "type": "string",
            "metadata": {
                "description": "location of the storage account"
            },
            "defaultValue": "[resourceGroup().location]"
        },
        "prefix": {
            "type": "string",
            "metadata": {
                "description": "Prefix for the azure resources"
            }
        },
        "vmSize": {
            "type": "string",
            "metadata": {
                "description": "Size of the VM"
            },
            "allowedValues": [
                "Standard_B1s",
                "Standard_B2s",
                "Standard_B4ms",
                "Standard_B8ms"
            ],
            "defaultValue": "Standard_B2s"
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Admin username for the VM"
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Admin password for the VM"
            }
        }
    },
    "variables": {
        "tags": {
            "Owner": "Ramakrishna",
            "Department": "IT",
            "Project": "Azure DevOps with Terraform"
        },
        "virtual_network_name": "[concat(parameters('prefix'),'-','vnet')]", // saanvikit-vnet
        "virtual_network_address_space": ["10.0.0.0/24"],
        "subnet_name_01": "[concat(parameters('prefix'),'-','subnet-01')]", // saanvikit-subnet-01
        "subnet_name_02": "[concat(parameters('prefix'),'-','subnet-02')]", // saanvikit-subnet-02
        "subnet_address_prefix_01": "10.0.0.0/25",
        "subnet_address_prefix_02": "10.0.0.128/25",
        "networkSecurityGroupName": "[concat(parameters('prefix'),'-','nsg')]",
        "publicIPAddressName": "[concat(parameters('prefix'),'-','publicIP')]",
        "networkInterfaceName": "[concat(parameters('prefix'),'-','nic')]",
        "vmName": "[concat(parameters('prefix'),'-','vm')]"
    },
    "resources": [
        {
            "name": "[parameters('storage_account_name')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-05-01",
            "tags": "[variables('tags')]",
            "location": "[parameters('location')]",
            "kind": "StorageV2",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Premium"
            }
        },
        {
            "name": "[variables('virtual_network_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-03-01",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('virtual_network_address_space')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_name_01')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_address_prefix_01')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnet_name_02')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_address_prefix_02')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('networkSecurityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-03-01",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "Allow_RDP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "Allow_HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('publicIPAddressName')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-03-01",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
        {
            "name": "[variables('networkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-03-01",
            "location": "[parameters('location')]",
            "tags": "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtual_network_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtual_network_name'), variables('subnet_name_01'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2024-07-01",
            "name": "[variables('vmName')]",
            "location": "[parameters('location')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "computerName": "[variables('vmName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
            ]
        }
    ],
    "outputs": {}
}
